ENT-1877: port JobResource to spec-first  - Remove exiting SchedulerStatusDTO and generated using spec-first  - Added api specification in candlepin-api-spec  - Updated existing junit
